# imdb_ratings_predictor

./: README.md  SUMMARY.md  pyproject.toml
imdb_ratings/notebooks/: DataExploration.ipynb  DataExplorationAndModel_v1.ipynb
