[tool.poetry]
name = "imdb_ratings"
version = "0.1.0"
description = ""
authors = ["ElaineZ <elainez@5s.technology>"]

[tool.poetry.dependencies]
python = "^3.7.4"
sklearn = "^0.0"
pandas = "^1.3.5"
jupyter = "^1.0.0"
ipykernel = "^6.7.0"
pendulum = "^2.1.2"
seaborn = "^0.11.2"
xgboost = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
